[gd_scene load_steps=2 format=3 uid="uid://dj051yp3mnerg"]

[ext_resource type="Script" path="res://core/ui/host_game_dialog.gd" id="1_fu45c"]

[node name="HostGame" type="Button"]
offset_left = 4.0
offset_top = 4.0
offset_right = 296.0
offset_bottom = 140.0
text = "Host..."
script = ExtResource("1_fu45c")

[node name="HostGameDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Host configuration"
initial_position = 4
ok_button_text = "Host"

[node name="VBoxContainer" type="VBoxContainer" parent="HostGameDialog"]
offset_left = 4.0
offset_top = 4.0
offset_right = 296.0
offset_bottom = 140.0

[node name="HBoxContainer" type="HBoxContainer" parent="HostGameDialog/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HostGameDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host mode"
horizontal_alignment = 1

[node name="HostMode" type="OptionButton" parent="HostGameDialog/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "Local"
popup/item_0/id = 0
popup/item_1/text = "Private"
popup/item_1/id = 1
popup/item_2/text = "Public"
popup/item_2/id = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HostGameDialog/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HostGameDialog/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lobby name"
horizontal_alignment = 1

[node name="LobbyName" type="LineEdit" parent="HostGameDialog/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="HostGameDialog/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HostGameDialog/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Port"
horizontal_alignment = 1

[node name="HostPort" type="SpinBox" parent="HostGameDialog/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1025.0
max_value = 65535.0
value = 45151.0

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="confirmed" from="HostGameDialog" to="." method="_on_host_game_dialog_confirmed"]
